fixed spacing and size for random quote generator

--- a/public/stylesheets/quote.css
+++ b/public/stylesheets/quote.css
@@ -37,13 +37,15 @@ a {
 }
 
 .twitterPost [class*="fa fa-"] {
-  border-radius: 60px;
   height: 1em;
-  line-height: 60px;
-  font-size: 60px;
+  font-size: 3em;
   text-align: center;
 }
 
 .container {
   font-size: 20px;
+}
+
+* {
+  outline: 1px solid red;
 }
